// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Rich text Editor Of Multiline Content 1`] = `
<div
  className="sc-kGXeez eUilzy"
>
  <div
    className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-gzVnrw sc-kpOJdX diKzLo @seine/ui-MuiPaper-rounded"
  >
    <div
      className="sc-jTzLTM dqdhzb"
      onClick={[Function]}
    >
      <div
        className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1783"
        extended={true}
      >
        <div
          className="@seine/ui-MuiGrid-root sc-ifAKCX hYJbbD @seine/ui-MuiGrid-container @seine/ui-MuiGrid-align-items-xs-center @seine/ui-MuiGrid-justify-xs-space-between"
          extended={true}
        >
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje hhHrSN @seine/ui-MuiGrid-item"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1887"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb eSCPIV"
                open={false}
                type="@seine/core/createLeftBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje hhHrSN @seine/ui-MuiGrid-item"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1938"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb cQVjzo"
                open={false}
                type="@seine/core/createRightBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="@seine/ui-MuiGrid-root sc-ifAKCX hYJbbD @seine/ui-MuiGrid-container @seine/ui-MuiGrid-direction-xs-column @seine/ui-MuiGrid-align-items-xs-center @seine/ui-MuiGrid-justify-xs-space-between"
          extended={true}
        >
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje cdCgDM @seine/ui-MuiGrid-container @seine/ui-MuiGrid-item @seine/ui-MuiGrid-direction-xs-column"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1939"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb fdZKyR"
                open={false}
                type="@seine/core/createTopBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje cdCgDM @seine/ui-MuiGrid-container @seine/ui-MuiGrid-item @seine/ui-MuiGrid-direction-xs-column"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1940"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb kVEHRq"
                open={false}
                type="@seine/core/createBottomBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="DraftEditor-root"
      >
        <div
          className="DraftEditor-editorContainer"
        >
          <div
            aria-activedescendant={null}
            aria-autocomplete={null}
            aria-controls={null}
            aria-describedby="placeholder-15402f46-8545-4804-aa93-e492dbb2b1d3"
            aria-expanded={null}
            aria-owns={null}
            className="public-DraftEditor-content"
            contentEditable={false}
            onBeforeInput={[Function]}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onCopy={[Function]}
            onCut={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onSelect={[Function]}
            role={null}
            spellCheck={false}
            style={
              Object {
                "WebkitUserSelect": "text",
                "outline": "none",
                "userSelect": "text",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
            suppressContentEditableWarning={true}
          >
            <div
              data-contents="true"
            >
              <div
                className=""
                data-block={true}
                data-editor="15402f46-8545-4804-aa93-e492dbb2b1d3"
                data-offset-key="3ofq1-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="3ofq1-0-0"
                >
                  <span
                    data-offset-key="3ofq1-0-0"
                    style={Object {}}
                  >
                    <span
                      data-text="true"
                    >
                      This block is draft.js content. Click here to edit the text.
                    </span>
                  </span>
                </div>
              </div>
              <div
                className=""
                data-block={true}
                data-editor="15402f46-8545-4804-aa93-e492dbb2b1d3"
                data-offset-key="99k9b-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="99k9b-0-0"
                >
                  <span
                    data-offset-key="99k9b-0-0"
                    style={Object {}}
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
              <div
                className=""
                data-block={true}
                data-editor="15402f46-8545-4804-aa93-e492dbb2b1d3"
                data-offset-key="3hni1-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="3hni1-0-0"
                >
                  <span
                    data-offset-key="3hni1-0-0"
                    style={Object {}}
                  >
                    <span
                      data-text="true"
                    >
                      We are planning to add text formatting toolbar soon.
                    </span>
                  </span>
                </div>
              </div>
              <div
                className=""
                data-block={true}
                data-editor="15402f46-8545-4804-aa93-e492dbb2b1d3"
                data-offset-key="5d97a-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="5d97a-0-0"
                >
                  <span
                    data-offset-key="5d97a-0-0"
                    style={Object {}}
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
              <div
                className=""
                data-block={true}
                data-editor="15402f46-8545-4804-aa93-e492dbb2b1d3"
                data-offset-key="cgfs1-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="cgfs1-0-0"
                >
                  <span
                    data-offset-key="cgfs1-0-0"
                    style={Object {}}
                  >
                    <span
                      data-text="true"
                    >
                      Draft.js is a framework for building rich text editors in React,
                    </span>
                  </span>
                </div>
              </div>
              <div
                className=""
                data-block={true}
                data-editor="15402f46-8545-4804-aa93-e492dbb2b1d3"
                data-offset-key="pu3o-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="pu3o-0-0"
                >
                  <span
                    data-offset-key="pu3o-0-0"
                    style={Object {}}
                  >
                    <span
                      data-text="true"
                    >
                      powered by an immutable model and abstracting over cross-browser differences.
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rich text Editor Of Single Line Content 1`] = `
<div
  className="sc-kGXeez eUilzy"
>
  <div
    className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-gzVnrw sc-kpOJdX diKzLo @seine/ui-MuiPaper-rounded"
  >
    <div
      className="sc-jTzLTM dqdhzb"
      onClick={[Function]}
    >
      <div
        className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1597"
        extended={true}
      >
        <div
          className="@seine/ui-MuiGrid-root sc-ifAKCX hYJbbD @seine/ui-MuiGrid-container @seine/ui-MuiGrid-align-items-xs-center @seine/ui-MuiGrid-justify-xs-space-between"
          extended={true}
        >
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje hhHrSN @seine/ui-MuiGrid-item"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1701"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb eSCPIV"
                open={false}
                type="@seine/core/createLeftBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje hhHrSN @seine/ui-MuiGrid-item"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1752"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb cQVjzo"
                open={false}
                type="@seine/core/createRightBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="@seine/ui-MuiGrid-root sc-ifAKCX hYJbbD @seine/ui-MuiGrid-container @seine/ui-MuiGrid-direction-xs-column @seine/ui-MuiGrid-align-items-xs-center @seine/ui-MuiGrid-justify-xs-space-between"
          extended={true}
        >
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje cdCgDM @seine/ui-MuiGrid-container @seine/ui-MuiGrid-item @seine/ui-MuiGrid-direction-xs-column"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1753"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb fdZKyR"
                open={false}
                type="@seine/core/createTopBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            className="@seine/ui-MuiGrid-root sc-EHOje cdCgDM @seine/ui-MuiGrid-container @seine/ui-MuiGrid-item @seine/ui-MuiGrid-direction-xs-column"
          >
            <div
              className="@seine/ui-MuiBox-root @seine/ui-MuiBox-root-1754"
              onMouseLeave={[Function]}
            >
              <button
                className="@seine/ui-MuiButtonBase-root @seine/ui-MuiFab-root sc-htpNat kaKtQr @seine/ui-MuiFab-sizeSmall"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="@seine/ui-MuiFab-label"
                >
                  <svg
                    aria-hidden="true"
                    className="@seine/ui-MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                </span>
              </button>
              <div
                className="@seine/ui-MuiPaper-root @seine/ui-MuiPaper-elevation1 sc-bxivhb kVEHRq"
                open={false}
                type="@seine/core/createBottomBlock"
              >
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add pie chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Pie chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add bar chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Bar chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add column chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    column chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add line chart"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    line chart
                  </span>
                </button>
                <button
                  className="@seine/ui-MuiButtonBase-root @seine/ui-MuiButton-root @seine/ui-MuiButton-text @seine/ui-MuiButton-text sc-bwzfXH hhBAIj @seine/ui-MuiButton-textSizeSmall @seine/ui-MuiButton-sizeSmall @seine/ui-MuiButton-fullWidth"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  title="Add text block"
                  type="button"
                >
                  <span
                    className="@seine/ui-MuiButton-label"
                  >
                    Rich text
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="DraftEditor-root"
      >
        <div
          className="DraftEditor-editorContainer"
        >
          <div
            aria-activedescendant={null}
            aria-autocomplete={null}
            aria-controls={null}
            aria-describedby="placeholder-15402f46-8545-4804-aa93-e492dbb2b1d3"
            aria-expanded={null}
            aria-owns={null}
            className="public-DraftEditor-content"
            contentEditable={false}
            onBeforeInput={[Function]}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onCopy={[Function]}
            onCut={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onSelect={[Function]}
            role={null}
            spellCheck={false}
            style={
              Object {
                "WebkitUserSelect": "text",
                "outline": "none",
                "userSelect": "text",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
            suppressContentEditableWarning={true}
          >
            <div
              data-contents="true"
            >
              <div
                className=""
                data-block={true}
                data-editor="15402f46-8545-4804-aa93-e492dbb2b1d3"
                data-offset-key="3ofq1-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="3ofq1-0-0"
                >
                  <span
                    data-offset-key="3ofq1-0-0"
                    style={Object {}}
                  >
                    <span
                      data-text="true"
                    >
                      This block is draft.js content. Click here to edit the text.
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rich text Multiline Content 1`] = `
<div
  className="sc-bdVaJa fciEdn DraftEditor/root DraftEditor/alignLeft"
>
  <div
    data-contents="true"
  >
    <div
      className="sc-bdVaJa fciEdn"
      data-block={true}
      data-offset-key="3ofq1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="3ofq1-0-0"
      >
        <span
          data-offset-key="3ofq1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            This block is draft.js content. Click here to edit the text.
          </span>
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa fciEdn"
      data-block={true}
      data-offset-key="99k9b-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="99k9b-0-0"
      >
        <span
          data-offset-key="99k9b-0-0"
          style={Object {}}
        >
          <br
            data-text="true"
          />
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa fciEdn"
      data-block={true}
      data-offset-key="3hni1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="3hni1-0-0"
      >
        <span
          data-offset-key="3hni1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            We are planning to add text formatting toolbar soon.
          </span>
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa fciEdn"
      data-block={true}
      data-offset-key="5d97a-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="5d97a-0-0"
      >
        <span
          data-offset-key="5d97a-0-0"
          style={Object {}}
        >
          <br
            data-text="true"
          />
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa fciEdn"
      data-block={true}
      data-offset-key="cgfs1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="cgfs1-0-0"
      >
        <span
          data-offset-key="cgfs1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            Draft.js is a framework for building rich text editors in React,
          </span>
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa fciEdn"
      data-block={true}
      data-offset-key="pu3o-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="pu3o-0-0"
      >
        <span
          data-offset-key="pu3o-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            powered by an immutable model and abstracting over cross-browser differences.
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rich text Single Line Content 1`] = `
<div
  className="sc-bdVaJa fciEdn DraftEditor/root DraftEditor/alignLeft"
>
  <div
    data-contents="true"
  >
    <div
      className="sc-bdVaJa fciEdn"
      data-block={true}
      data-offset-key="3ofq1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="3ofq1-0-0"
      >
        <span
          data-offset-key="3ofq1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            This block is draft.js content. Click here to edit the text.
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
